@@ -12,6 +12,7 @@
 * Fixing #187 cleaning up partial download of FFmpeg (thanks to Todd Wilkinson)
 * Fixing #190 add missing chromaloc parameter for x265 (thanks to Etz)
 * Fixing that returning item back from queue of a different encoder type would crash Fastflix
+* Fixing HDR10 details to be track specific (thanks to Harybo)
 
 ## Version 4.1.2
 
